--- a/mini game/style.css
+++ b/mini game/style.css
@@ -1,5 +1,6 @@
-body{background-color: black;}
-.game{background:url(img/background.png) center/cover no-repeat; height:600px; width: 1200px; margin:auto; transform: translateY(30%);border-radius: 12px 12px;}
+
+body{background-color: black; height: 100vh;}
+.game{background:url(img/background.png) center/cover no-repeat;height:600px; max-width: 1200px; margin:auto; transform: translateY(30%); border-radius: 12px 12px;}
 .header{display:flex; justify-content: center; flex-direction: column; align-items: center; padding:12px; margin-bottom: 46px;}
 .play_Btn{font-size: 24px; border:none; outline: none; background-color: beige; width: 50px; height: 50px; border: 4px solid black; border-radius: 12px; cursor: pointer;}
 .timer{background-color: white; width: 100px; height: 30px; border: 4px solid black; margin: 12px 0px 12px 0px; text-align: center; font-size: 20px; visibility: hidden;}
@@ -12,3 +13,11 @@ body{background-color: black;}
 .pop_up_text{color:white; margin-top:10px; font-size: 28px;}
 .you_win{display:none;}
 .retry{cursor: pointer;}
+
+
+@media screen and (max-width:768px){
+    body{margin:0;}
+    .game{transform: translateY(0%); border-radius:0px; height: 100vh;}
+    .pop_up{transform: translateY(-250%); width: 250px; height: 140px;}
+    .game_field{position: absolute; top:30%;}
+}
